<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg"
    android:focusable="true">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="323pt"
        android:layout_height="335pt"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_btn3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018">

        <TextView
            android:textSize="25sp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="52pt"
            android:gravity="center"
            android:text="@string/helper_title"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="324pt"
            android:layout_height="1dp"
            android:background="@color/white"
            android:orientation="horizontal" />

        <TextView
            android:textSize="25sp"
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:padding="10dp"
            android:text="@string/helper_content"
            android:textColor="@color/white" />

        <LinearLayout

            android:layout_width="324pt"
            android:layout_height="1dp"
            android:background="@color/white"
            android:orientation="horizontal" />

        <TextView
            android:textSize="25sp"
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white" />

        <TextView
            android:textSize="25sp"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/helper_contact"
            android:textColor="@color/white" />

        <TextView
            android:visibility="gone"
            android:textSize="25sp"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="201pt"
            android:padding="10dp"
            android:text="@string/helper_repeat_call"
            android:textColor="@color/white" />
    </LinearLayout>



    <ImageButton
        android:id="@+id/ibtnBack"
        android:layout_width="140pt"
        android:layout_height="54pt"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/selector_btn_radius_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_svg_back" />


    <ImageButton
        android:id="@+id/ibtnConfig"
        android:layout_width="140pt"
        android:layout_height="54pt"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/selector_btn_radius_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_svg_setting" />

    <LinearLayout
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/footer"
            android:textColor="@color/white"
            android:textSize="@dimen/text_smart"/>

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Version 1.2"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>